[package]
name = "compile-trpl"
version = "0.1.1"
authors = ["Pascal Hertleif <killercup@gmail.com>"]

[features]
default = []
dev = ["clippy"]

[dependencies]
regex = "0.1.32"
docopt = "0.6.69"
rustc-serialize = "0.3"

[dependencies.clippy]
git = "https://github.com/Manishearth/rust-clippy.git"
optional = true
